<resources>
    <string name="app_name">IoT</string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="IntSmoke">Interface of a smoke sensor</string>
    <string name="typeIot">Choose sensor type</string>
    <string name="radio_smoke">Smoke sensor</string>
    <string name="radio_gas">Gas sensor</string>
    <string name="radio_temperature">Temperature sensor</string>
    <string name="radio_uv">UV sensor</string>
    <string name="createButton">Create</string>
    <string name="new_sensor">Create sensor</string>
    <string name="IntGas">Interface of a gas sensor</string>
    <string name="IntTemp">Interface of a temperature sensor</string>
    <string name="IntUV">Interface of a UV sensor</string>
    <!-- Settings Activity Title -->
    <string name="activity_settings">SettingsActivity</string>


    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="reset_settings">Reset</string>
    <string name="exit_app">Exit</string>
    <string name="setServerIp">Server IP address</string>
    <string name="defaultServerIPAddress">0.0.0.0</string>
    <string name="UniqueSessionId">Unique session ID</string>
    <string name="DurationOfSendingData">Duration for sending data</string>
    <string name="defaultServerPort">1883</string>
    <string name="title_activity_new_sensor">NewSensorActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="activity_main_label">Activity Main</string>
    <string name="newsensor_activity_label">NewSensor Activity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="send_location">Send Location</string>
    <string name="auto_mode">Auto mode</string>
    <string name="auto_mode_description">Send location coordinates from GPS</string>
    <string name="choose_pair">Choose a pair of location coordinates</string>
    <string name="manual_mode">Manual mode</string>
</resources>