<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/new_sensor"
        android:orderInCategory="100"
        android:title="@string/new_sensor"
        app:showAsAction="never" />
    <item
        android:id="@+id/session"
        android:orderInCategory="100"
        android:title="Connect"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/reset_settings"
        android:orderInCategory="100"
        android:title="@string/reset_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/exit_app"
        android:orderInCategory="100"
        android:title="@string/exit_app"
        app:showAsAction="never" />

</menu>