<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.NewSensorActivity"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/createType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/typeIot"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:textSize="23sp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


    </com.google.android.material.textview.MaterialTextView>

    <RadioGroup
        android:layout_marginTop="5dp"
        android:id="@+id/groupradio"
        android:layout_marginLeft="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_smoke"
            android:text="@string/radio_smoke"
            android:textSize="20sp"/>

<!--        <com.google.android.material.slider.Slider-->
<!--            android:layout_width="300dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="50dp"-->
<!--            android:layout_marginLeft="100dp"-->
<!--            android:valueFrom="0"-->
<!--            android:valueTo="0.25" />-->

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_gas"
            android:text="@string/radio_gas"
            android:textSize="20sp"/>

<!--        <com.google.android.material.slider.Slider-->
<!--            android:layout_width="300dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="50dp"-->
<!--            android:layout_marginLeft="100dp"-->
<!--            android:valueFrom="0"-->
<!--            android:valueTo="0.11"/>-->

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_temperature"
            android:text="@string/radio_temperature"
            android:textSize="20sp"/>
<!--        <com.google.android.material.slider.Slider-->
<!--            android:layout_width="300dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="50dp"-->
<!--            android:layout_marginLeft="100dp"-->
<!--            android:valueFrom="-5"-->
<!--            android:valueTo="80"/>-->

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_uv"
            android:text="@string/radio_uv"
            android:textSize="20sp"/>

<!--        <com.google.android.material.slider.Slider-->
<!--            android:layout_width="300dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="50dp"-->
<!--            android:layout_marginLeft="100dp"-->
<!--            android:valueFrom="0"-->
<!--            android:valueTo="11"/>-->
    </RadioGroup>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createButton"
        android:id="@+id/createButton"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="140dp"
        />


</LinearLayout>